--- a/_posts/2022-05-20-post-1.md
+++ b/_posts/2022-05-20-post-1.md
@@ -3,4 +3,4 @@ title: "First post"
 date: 2022-05-20
 ---
 
-Today I *finally* got time to make this and deal with the publishing part. So far it looks really good and seems to be working really well too!
+Today I *finally* got time to make this and deal with the publishing part. So far it looks really good and seems to be working well too!
