add page size in math post

--- a/_posts/2022-05-21-math.md
+++ b/_posts/2022-05-21-math.md
@@ -4,7 +4,7 @@ date: 2022-05-21
 ---
 Today my dad decided to test how much I have learnt in Mathematics. We were supposed to do 2 chapters today but we only got time to do 1 of them so the next one is going to do be done tomorrow. 
 
-We started with questions from a reference book that we have and then went for some online questions. All I gotta say is: woah. Math is quite *something*. It really opens up your mind. When I got stuck in a question and my dad started explaining it to me and pretty much always I realized half-way where I went wrong and then I completed the rest of it. The beautiful thing with doing questions is that once you see it and solve it, you don't forget how to do it. Sure, you might mess up slightly here and there but you will still have an idea of where the stuff goes. At one point I mistook a multiplication sign for addition and wasted pretty much 3 pages on trying to do this question. Once I realized my error, the question was done in half a page.
+We started with questions from a reference book that we have and then went for some online questions. All I gotta say is: woah. Math is quite *something*. It really opens up your mind. When I got stuck in a question and my dad started explaining it to me and pretty much always I realized half-way where I went wrong and then I completed the rest of it. The beautiful thing with doing questions is that once you see it and solve it, you don't forget how to do it. Sure, you might mess up slightly here and there but you will still have an idea of where the stuff goes. At one point I mistook a multiplication sign for addition and wasted pretty much 3 pages (oh, and these were 3 pages on a big almost-a4-sized notebook) on trying to do this question. Once I realized my error, the question was done in half a page.
 
 I realized that even though it seemed like I had completely wasted my time in the beginning of that question, it did help me after all: because once I realized that I mistook the sign, I just had to replace the values. All the 'critical thinking' part was already done - thrice in fact, on 3 different pages. Another time, I solved an equation twice not realizing that I was literally getting what I started with. Oh and how can I forget the part where I completely blundered 3 seperate questions because I made up a mathematical identity that doesn't exist!
 
