fix bugs, add bitlink link to newest post

--- a/_posts/2022-05-21-math.md
+++ b/_posts/2022-05-21-math.md
@@ -1,7 +1,8 @@
 ---
+layout: post
 title: "Mathematics"
 date: 2022-05-21
-bitlink: "https://bit.ly/maths1129"
+bitlink: https://bit.ly/maths1129
 ---
 Today my dad decided to test how much I have learnt in Mathematics. We were supposed to do 2 chapters today but we only got time to do 1 of them so the next one is going to do be done tomorrow. 
 
