increase the length of descriptions

--- a/_posts/2022-05-21-math.md
+++ b/_posts/2022-05-21-math.md
@@ -3,7 +3,9 @@ layout: post
 title: "Mathematics"
 date: 2022-05-21
 bitlink: https://bit.ly/maths1129
-description: Today my dad decided to test how much I have learnt in Mathematics. We were supposed to do 2 chapters today but we only got time to do 1 of them so the next one is going to do be done tomorrow...
+description: >
+ Today my dad decided to test how much I have learnt in Mathematics. We were supposed to do 2 chapters today but we only got time to do 1 of them so the next one is going to do be done tomorrow. 
+ We started with questions from a reference book that we have and then went for some online questions. All I gotta say is: woah. Math is quite *something*. It really opens up your mind. When I got stuck in a question and...
 ---
 Today my dad decided to test how much I have learnt in Mathematics. We were supposed to do 2 chapters today but we only got time to do 1 of them so the next one is going to do be done tomorrow. 
 
